force-app/main/default/objects/MergeEvent__e/MergeEvent__e.object-meta.xml
<CustomObject>
    <description
  >Custom Event for merging Objects. Accomplished with APEX. Must implement Trigger to create MergeEvent__e per Object.</description>
    <label>Merge Event</label>
    <pluralLabel>Merge Events</pluralLabel>
</CustomObject>