force-app/main/default/objects/MergeEvent__e/fields/MasterRecordID__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordID__c</fullName>
    <description>Record that persists after a merge</description>
    <label>Master Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>