force-app/main/default/objects/MergeEvent__e/fields/MergedDate__c.field-meta.xml
<CustomField>
    <fullName>MergedDate__c</fullName>
    <description>Date the Merge occurred</description>
    <label>Merged Date</label>
    <type>DateTime</type>
</CustomField>