force-app/main/default/objects/MergeEvent__e/fields/MergedRecordID__c.field-meta.xml
<CustomField>
    <fullName>MergedRecordID__c</fullName>
    <description>The old record id that was deleted and merged into another.</description>
    <label>Merged Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>