force-app/main/default/objects/MergeEvent__e/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>Name of the Object that was Merged</description>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>